# GLTest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GLTest  GLTest.cbp  Makefile  README.md  cmake_install.cmake  imgui.ini
include/GL/: glxew.h
res/shaders/default/: flip_quad.gsh  fragment.fsh  fragment.shader  vertex.shader
src/: main.cpp  renderer.cpp  renderer.h
